<resources>
    <string name="app_name">Booking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_text">This app is created by Anastasiia Andrukh as a part of the university assignment by the theme \"Android application for booking rooms in the hotel\"</string>
    <string name="about">About</string>
    <string name="TermsAndConditionsText">
        Welcome to Andrukh Booking Android App!
\nThese terms and conditions outline the rules and regulations for the use of Andrukh Booking Android App\'s Website, located at Andrukh Booking Android App.
\nBy accessing this website we assume you accept these terms and conditions. Do not continue to use Andrukh Booking Android App if you do not agree to take all of the terms and conditions stated on this page.
\nThe following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: "Client", "You" and "Your" refers to you, the person log on this website and compliant to the Company’s terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.
        \n\n<u><b>License</b></u>
\nUnless otherwise stated, Andrukh Booking Android App and/or its licensors own the intellectual property rights for all material on Andrukh Booking Android App. All intellectual property rights are reserved. You may access this from Andrukh Booking Android App for your own personal use subjected to restrictions set in these terms and conditions.
\nYou must not:
\n•	Republish material from Andrukh Booking Android App
\n•	Sell, rent or sub-license material from Andrukh Booking Android App
\n•	Reproduce, duplicate or copy material from Andrukh Booking Android App
\n•	Redistribute content from Andrukh Booking Android App
\nThis Agreement shall begin on the date hereof. Our Terms and Conditions were created with the help of the Terms And Conditions Generator and the Privacy Policy Generator.
Parts of this website offer an opportunity for users to post and exchange opinions and information in certain areas of the website. Andrukh Booking Android App does not filter, edit, publish or review Comments prior to their presence on the website. Comments do not reflect the views and opinions of Andrukh Booking Android App,its agents and/or affiliates. Comments reflect the views and opinions of the person who post their views and opinions. To the extent permitted by applicable laws, Andrukh Booking Android App shall not be liable for the Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this website.
Andrukh Booking Android App reserves the right to monitor all Comments and to remove any Comments which can be considered inappropriate, offensive or causes breach of these Terms and Conditions.
\nYou warrant and represent that:
\n•	You are entitled to post the Comments on our website and have all necessary licenses and consents to do so;
\n•	The Comments do not invade any intellectual property right, including without limitation copyright, patent or trademark of any third party;
\n•	The Comments do not contain any defamatory, libelous, offensive, indecent or otherwise unlawful material which is an invasion of privacy
\n•	The Comments will not be used to solicit or promote business or custom or present commercial activities or unlawful activity.
\nYou hereby grant Andrukh Booking Android App a non-exclusive license to use, reproduce, edit and authorize others to use, reproduce and edit any of your Comments in any and all forms, formats or media.
        \n\n<u><b>Your Privacy</b></u>
        \nPlease read Privacy Policy
        \n\n<u><b>Reservation of Rights</b></u>
\nWe reserve the right to request that you remove all links or any particular link to our Website. You approve to immediately remove all links to our Website upon request. We also reserve the right to amen these terms and conditions and it’s linking policy at any time. By continuously linking to our Website, you agree to be bound to and follow these linking terms and conditions.
        \n\n<u><b>Disclaimer</b></u>
\nTo the maximum extent permitted by applicable law, we exclude all representations, warranties and conditions relating to our website and the use of this website. Nothing in this disclaimer will:
\n•	limit or exclude our or your liability for death or personal injury;
\n•	limit or exclude our or your liability for fraud or fraudulent misrepresentation;
\n•	limit any of our or your liabilities in any way that is not permitted under applicable law; or
\n•	exclude any of our or your liabilities that may not be excluded under applicable law.
\nThe limitations and prohibitions of liability set in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer, including liabilities arising in contract, in tort and for breach of statutory duty.
\nAs long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.

    </string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="shareBookingInfo">Your booking Info details:
        \nPayer: %1$s
        \nTravel Type: %2$s
        \nDate: 04/10/2020 - 08/10/2020
        \nAccommodations: Single Room (1 Single Bed)
        \nPrice: 45$
    </string>
    <string name="share">Share</string>
    <string name="enter_personal_information">Enter Personal Information</string>
    <string name="booking_info">Booking Info</string>
    <string name="list_of_rooms">List of Rooms</string>
    <string name="price">%1$.0f$</string>
    <string name="hotel_room_image">Hotel Room Image</string>
    <string name="hotel_room_select_button">Hotel Room Select button</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="book_text">Book</string>
    <string name="notify_me_when_the_request_is_processed">Notify me when the request is processed</string>
    <string name="is_notification_required_button">Is notification required button</string>
    <string name="cancel_this_booking_request">Cancel this booking request</string>
</resources>