<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_normal">

        <TextView
            android:id="@+id/textView_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/first_name"
            android:layout_below="@id/textView_firstName"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextFirstName"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_lastName"
            android:ems="10"
            android:contentDescription="@string/last_name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextLastName"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_email"
            android:ems="10"
            android:contentDescription="@string/email"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView_creditCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_email"
            android:text="@string/credit_card_number" />

        <EditText
            android:id="@+id/editText_creditCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_creditCard"
            android:ems="10"
            android:contentDescription="@string/credit_card_number"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView_purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_creditCard"
            android:layout_marginTop="20sp"
            android:text="What is the primary purpose for your trip?" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_purpose"
            android:layout_marginTop="10sp"
            android:contentDescription="Choose the purpose of your trip"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_leisure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="Leisure" />

            <RadioButton
                android:id="@+id/radioButton_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Business" />
        </RadioGroup>

        <Button
            android:id="@+id/bookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:hint="@string/book_text"
            android:text="@string/book_text" />
    </RelativeLayout>
</layout>